💄 [buildlogic] 更新测试配置为 JUnit Jupiter，优化任务配置并新增 Javadoc Jar